# cpuemu

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  list.todo
cpuemu/: main.cpp  main_tools.cpp  main_tools.hpp  project_env.hpp
cpuemu/common/: CMakeLists.txt  env.hpp  memory.hpp  types.cpp  types.hpp
cpuemu/common/bus/: bus.hpp  bus8.hpp  bus_mode.hpp
cpuemu/common/pin/: pin.hpp  pin_mode.hpp  pin_state.hpp
cpuemu/config/: project_env.config.hpp
cpuemu/emu/common/: env.hpp  memory.hpp  types.hpp
cpuemu/emu/mpu6502/: cpu.cpp  cpu.hpp  instruction.hpp  instruction_impl.hpp
cpuemu/emu/mpu6502/instruction_impl/: addressing_mode.hpp  common.cpp  common.hpp
cpuemu/emu/mpu6502/instruction_impl/arithmetic/: adc.cpp  cmp.cpp  cpx.cpp  cpy.cpp  sbc.cpp
cpuemu/emu/mpu6502/instruction_impl/bit/: rmb.cpp  smb.cpp  trb.cpp  tsb.cpp
cpuemu/emu/mpu6502/instruction_impl/branches/: bbr.cpp  bbs.cpp  bcc.cpp  bcs.cpp  beq.cpp  bmi.cpp  bne.cpp  bpl.cpp  bra.cpp  bvc.cpp  bvs.cpp
cpuemu/emu/mpu6502/instruction_impl/inc_dec/: dec.cpp  dex.cpp  dey.cpp  inc.cpp  inx.cpp  iny.cpp
cpuemu/emu/mpu6502/instruction_impl/jumps/: jmp.cpp  jsr.cpp  rts.cpp
cpuemu/emu/mpu6502/instruction_impl/load_store/: lda.cpp  ldx.cpp  ldy.cpp  sta.cpp  stx.cpp  sty.cpp  stz.cpp
cpuemu/emu/mpu6502/instruction_impl/logical/: and.cpp  bit.cpp  eor.cpp  ora.cpp
cpuemu/emu/mpu6502/instruction_impl/register_transfers/: tax.cpp  tay.cpp  txa.cpp  tya.cpp
cpuemu/emu/mpu6502/instruction_impl/shifts/: asl.cpp  lsr.cpp  rol.cpp  ror.cpp
cpuemu/emu/mpu6502/instruction_impl/stack/: pha.cpp  php.cpp  phx.cpp  phy.cpp  pla.cpp  plp.cpp  plx.cpp  ply.cpp  tsx.cpp  txs.cpp
cpuemu/emu/mpu6502/instruction_impl/status/: clc.cpp  cld.cpp  cli.cpp  clv.cpp  sec.cpp  sed.cpp  sei.cpp
cpuemu/emu/mpu6502/instruction_impl/system/: brk.cpp  nop.cpp  rti.cpp  stp.cpp  wai.cpp
cpuemu/mos6502/: CMakeLists.txt  cpu.cpp  cpu.hpp  instruction.hpp  instruction_impl.hpp
cpuemu/mos6502/instruction_impl/: addressing_mode.hpp  common.cpp  common.hpp
cpuemu/mos6502/instruction_impl/arithmetic/: adc.cpp  cmp.cpp  cpx.cpp  cpy.cpp  sbc.cpp
cpuemu/mos6502/instruction_impl/bit/: rmb.cpp  smb.cpp  trb.cpp  tsb.cpp
cpuemu/mos6502/instruction_impl/branches/: bbr.cpp  bbs.cpp  bcc.cpp  bcs.cpp  beq.cpp  bmi.cpp  bne.cpp  bpl.cpp  bra.cpp  bvc.cpp  bvs.cpp
cpuemu/mos6502/instruction_impl/incdec/: dec.cpp  dex.cpp  dey.cpp  inc.cpp  inx.cpp  iny.cpp
cpuemu/mos6502/instruction_impl/jumps/: jmp.cpp  jsr.cpp  rts.cpp
cpuemu/mos6502/instruction_impl/ldst/: lda.cpp  ldx.cpp  ldy.cpp  sta.cpp  stx.cpp  sty.cpp  stz.cpp
cpuemu/mos6502/instruction_impl/logical/: and.cpp  bit.cpp  eor.cpp  ora.cpp
cpuemu/mos6502/instruction_impl/regtransfer/: tax.cpp  tay.cpp  txa.cpp  tya.cpp
cpuemu/mos6502/instruction_impl/shifts/: asl.cpp  lsr.cpp  rol.cpp  ror.cpp
cpuemu/mos6502/instruction_impl/stack/: pha.cpp  php.cpp  phx.cpp  phy.cpp  pla.cpp  plp.cpp  plx.cpp  ply.cpp  tsx.cpp  txs.cpp
cpuemu/mos6502/instruction_impl/status/: clc.cpp  cld.cpp  cli.cpp  clv.cpp  sec.cpp  sed.cpp  sei.cpp
cpuemu/mos6502/instruction_impl/system/: brk.cpp  nop.cpp  rti.cpp  stp.cpp  wai.cpp
cpuemu/w65c02s/: CMakeLists.txt  cpu.cpp  cpu.hpp  cycle_op.hpp  execution_wrapper.cpp  execution_wrapper.hpp  instruction.hpp  instruction_impl.cpp  instruction_impl.hpp  instruction_info.hpp  pinout.hpp  program_sanity_checker.cpp  program_sanity_checker.hpp  register_view.hpp  status_register.hpp
cpuemu/w65c02s/instruction_impl/arithmetic/: adc.cpp  cmp.cpp  cpx.cpp  cpy.cpp  sbc.cpp
cpuemu/w65c02s/instruction_impl/bit/: rmb.cpp  smb.cpp  trb.cpp  tsb.cpp
cpuemu/w65c02s/instruction_impl/branches/: bbr.cpp  bbs.cpp  bcc.cpp  bcs.cpp  beq.cpp  bmi.cpp  bne.cpp  bpl.cpp  bra.cpp  bvc.cpp  bvs.cpp
cpuemu/w65c02s/instruction_impl/incdec/: dec.cpp  dex.cpp  dey.cpp  inc.cpp  inx.cpp  iny.cpp
cpuemu/w65c02s/instruction_impl/jumps/: jmp.cpp  jsr.cpp  rts.cpp
cpuemu/w65c02s/instruction_impl/ldst/: lda.cpp  ldx.cpp  ldy.cpp  sta.cpp  stx.cpp  sty.cpp  stz.cpp
cpuemu/w65c02s/instruction_impl/logical/: and.cpp  bit.cpp  eor.cpp  ora.cpp
cpuemu/w65c02s/instruction_impl/regtransfer/: tax.cpp  tay.cpp  txa.cpp  tya.cpp
cpuemu/w65c02s/instruction_impl/shifts/: asl.cpp  lsr.cpp  rol.cpp  ror.cpp
cpuemu/w65c02s/instruction_impl/stack/: pha.cpp  php.cpp  phx.cpp  phy.cpp  pla.cpp  plp.cpp  plx.cpp  ply.cpp  tsx.cpp  txs.cpp
cpuemu/w65c02s/instruction_impl/status/: clc.cpp  cld.cpp  cli.cpp  clv.cpp  sec.cpp  sed.cpp  sei.cpp
cpuemu/w65c02s/instruction_impl/system/: brk.cpp  nop.cpp  rti.cpp  stp.cpp  wai.cpp
tests/common/: test_memory.cpp
tests/w65c02s/: test_execution_wrapper.cpp  test_program_sanity_checker.cpp
tests/w65c02s/instructions/: macros.hpp
tests/w65c02s/instructions/arithmetic/: test_adc.cpp
